# node-sapnwrfc

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README  README.md  appveyor-publish.bat  appveyor.yml  binding.gyp  circle.yml  gulpfile.js  npm-shrinkwrap.json  package.json  preinstall.js  sapnwrfc.js  wscript
compiled/0.6/win32/ia32/: sapnwrfc.node
compiled/0.8/win32/ia32/: sapnwrfc.node
compiled/4.0/linux/x64/: sapnwrfc.node
compiled/4.0/win32/x64/: sapnwrfc.node
compiled/4.1/linux/x64/: sapnwrfc.node
compiled/4.1/win32/x64/: sapnwrfc.node
compiled/4.2/win32/x64/: sapnwrfc.node
compiled/5.0/linux/x64/: sapnwrfc.node
compiled/5.0/win32/x64/: sapnwrfc.node
examples/: example1.js
src/: Common.h  Connection.cc  Connection.h  Function.cc  Function.h  Loggable.cc  Loggable.h  binding.cc
tests/: offline.js  testSetIniPath.js
